--- a/src/components/ui/ui.scss
+++ b/src/components/ui/ui.scss
@@ -3,7 +3,7 @@
     // .ui__title
 
     &__title {
-        margin-bottom: 48px;
+        margin-bottom: 24px;
     }
 
     // .ui__content
@@ -18,6 +18,9 @@
     // .content__block
 
     &__block {
+    }
+
+    &__block.dropdown {
         margin-bottom: 64px;
     }
 
