End of test work

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,4 +1,8 @@
+@import '../../mixins/media.scss';
+
 .App {
+  background: #F2F2F2;
+
   //App__menu
   &__menu {
     margin: auto;
@@ -24,144 +28,85 @@
 
   //App__container
   &__container {
-    padding: 32px 48px 64px 64px;
-    max-width: 1312px;
+    max-width: 1440px;
+    height: 100vh;
+    padding: 32px 64px 48px 64px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
-    grid-auto-flow: dense;
+    grid-template-columns: repeat(12, 1fr);
     grid-column-gap: 32px;
-    grid-template-areas:
-      "hd hd hd hd hd hd hd hd hd hd hd hd"
-      "sd sd sd mt mt mt mt mt mt mt mt mt"
-      ". . . main main main main main main main main main"
-      "ft ft ft ft ft ft ft ft ft ft ft ft";
 
     .header {
-      grid-area: hd;
-    }
-
-    .mainTop {
-      grid-area: mt;
+      grid-column: 1 / all;
     }
 
     .sidebar {
-      grid-area: sd;
+      grid-column: 1/ all;
+    }
+
+    .mainTop {
+      grid-column: 4 / all;
     }
 
     main {
-      grid-area: main;
+      grid-column: 4 / all;
     }
 
     .footer {
-      grid-area: ft;
+      grid-column: 1 / all;
+    }
+
+    @include fontsDesktop;
+  }
+}
+
+@include for-size(desktop) {
+  .App {
+    &__container {
+      grid-column-gap: 32px;
     }
   }
 }
 
-//mobile
-h1 {
-  font-size: 32px;
-  line-height: 40px;
-}
-
-h2 {
-  font-size: 28px;
-  line-height: 36px;
-}
-
-h3 {
-  font-size: 20px;
-  line-height: 28px;
-}
-
-h4 {
-  font-size: 18px;
-  line-height: 28px;
-}
-
-.lead {
-  font-size: 20px;
-  line-height: 28px;
-}
-
-.big {
-  font-size: 18px;
-  line-height: 28px;
-}
-
-.lead {
-  font-size: 14px;
-  line-height: 20px;
-}
-
-//desktop
-h1 {
-  font-size: 48px;
-  line-height: 56px;
-}
-
-h2 {
-  font-size: 32px;
-  line-height: 40px;
-}
-
-h3 {
-  font-size: 24px;
-  line-height: 32px;
-}
-
-h4 {
-  font-size: 18px;
-  line-height: 28px;
-}
-
-.lead {
-  font-size: 24px;
-  line-height: 32px;
-}
-
-.big {
-  font-size: 18px;
-  line-height: 28px;
-}
-
-.lead {
-  font-size: 14px;
-  line-height: 20px;
-}
-
-
-@media(max-width: 928.98px) {
+@include for-size(tab) {
   .App {
     &__container {
       grid-template-columns: repeat(8, 1fr);
-      grid-template-areas:
-        "hd hd hd hd hd hd hd hd"
-        "sd sd sd main main main main"
-        "ft ft ft ft ft ft ft ft";
+      padding: 64px 32px 48px 64px;
+
+      .mainTop {
+        grid-column: 1 / all;
+      }
+
+      main {
+        grid-column: 1 / all;
+      }
+
+      .footer {
+        grid-column: 1 / all;
+      }
     }
   }
 }
 
-@media(max-width: 424.98px) {
+@include for-size(mob) {
   .App {
     &__container {
       grid-template-columns: repeat(4, 1fr);
+      padding: 32px 16px 48px 16px;
       grid-column-gap: 24px;
-      grid-template-areas:
-        "hd hd hd hd"
-        "sd main main main"
-        "ft ft ft ft";
+
+      @include fontsMob;
     }
   }
 }
 
-@media(max-width: 320px) {
+@include for-size(smallMob) {
   .App {
     &__container {
       display: flex;
       flex-direction: column;
+      padding: 16px 16px 16px 16px;
     }
   }
 }
