--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,3 +1,4 @@
+@import '../../mixins/media.scss';
 .menu {
     background: url('../../images/menu/bgMenu.png') no-repeat center / cover;
     height: 100%;
@@ -8,15 +9,32 @@
         max-width: 760px;
         height: 98%;
         background-color: #FFFFFF;
+        @include for-size(tab) {
+            max-width: 450px;
+        }
         // .menu__content
 
         &__content {
             height: inherit;
-            padding: 24px 8px 40px 56px;
+            padding: 24px 0px 40px 56px;
             display: grid;
             grid-template-columns: repeat(7, 1fr);
             grid-template-rows: auto 1fr auto;
             grid-column-gap: 32px;
+            @include for-size(mob) {
+                .menu__about {
+                    grid-column: 1 / 7;
+                }
+                .menu__footer {
+                    grid-column: 1 / 7;
+                }
+
+            }
+            @include for-size(smallMob) {
+                grid-template-columns: repeat(1, 1fr);
+                text-align: center;
+                padding: 24px 24px 24px 24px;
+            }
         }
     }
 
@@ -27,6 +45,9 @@
         display: flex;
         align-items: center;
         margin-bottom: 48px;
+        @include for-size(tab) {
+            justify-content: space-between;
+        }
     }
 
     // .menu__logo
@@ -34,6 +55,7 @@
     &__logo {
         display: flex;
         align-items: center;
+        margin-right: 32px;
     }
 
     // .menu__logo-img
@@ -59,6 +81,10 @@
         right: 0;
         margin-right: 64px;
         cursor: pointer;
+        @include for-size(tab) {
+            position: inherit;
+            margin-right: 0;
+        }
     }
 
     // .menu__close-img
@@ -66,16 +92,13 @@
     &__close-img {
 
         svg {
-            max-width: 24px;
-            max-height: 24px;
-            fill: #FFFFFF;
-            transition: .3s ease;
+            transition: .3s linear;
         }
 
         &:hover {
             svg {
                 fill: #1b1b1b;
-                transition: .3s ease;
+                transition: .3s linear;
             }
         }
     }
@@ -100,7 +123,11 @@
 
     // .menu__about-number
 
-    &__about-number {}
+    &__about-number {
+        font-size: 18px;
+        line-height: 28px;
+        font-weight: 500;
+    }
 
     // .menu__footer
 
@@ -114,32 +141,37 @@
     // .menu__footer-img
 
     &__footer-img {
-        max-width: 56px;
-        max-height: 56px;
+        width: 100%;
+        height: 100%;
+        max-width: 48px;
+        height: 48px;
+        justify-content: center;
+        display: flex;
         margin-right: 24px;
+        align-items: center;
+        border-radius: 50%;
+        background-color: #fff;
+        box-shadow: 0px 4px 8px 4px rgb(0 0 0 / 8%);
+        transition: box-shadow 0.1s linear;
+        cursor: pointer;
+
+        &:hover {
+            box-shadow: 6px 6px 10px 10px rgb(0 0 0 / 12%);
+        }
+
+        img {
+            max-width: 14px;
+            max-height: 14px;
+        }
     }
 
     // .menu__footer-link
 
     &__footer-link {
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 500;
         color: #3E29E3;
         cursor: pointer;
-    }
-}
-
-@media (max-width: 767.98px) {
-    .menu {
-        &__close-img {
-
-            svg {
-                fill: #1b1b1b;
-            }
-
-            &:hover {
-                svg {
-                    fill: #000;
-                }
-            }
-        }
     }
 }
