--- a/src/components/ui/chunk/buttons/buttons.scss
+++ b/src/components/ui/chunk/buttons/buttons.scss
@@ -1,11 +1,29 @@
+@import '../../../../mixins/media.scss';
 .buttons {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 148px);
+    grid-column-gap: 164px;
     align-items: flex-end;
+    margin-bottom: 64px;
+    @include for-size(tab) {
+        grid-template-columns: repeat(2, 148px);
+        grid-column-gap: 32px;
+    }
+    @include for-size(mob) {
+        grid-template-columns: repeat(2, 148px);
+        grid-column-gap: 16px;
+    }
+    @include for-size(smallMob) {
+        grid-template-columns: repeat(1, 148px);
+        justify-content: center;
+        text-align: center;
+    }
     // .buttons__item
 
     &__item {
-        margin-right: 164px;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 24px;
     }
 
     // buttons__item-subtitle
@@ -14,6 +32,7 @@
         font-size: 14px;
         line-height: 20px;
         color: #7D7D7D;
+        margin-bottom: 24px;
     }
 
     // .buttons__item-btn
@@ -21,9 +40,9 @@
     &__item-btn {
         position: relative;
         color: #FFFFFF;
+        font-weight: 500;
         padding: 16px 32px;
         border-radius: 32px;
-        margin-top: 24px;
         border: none;
         background-image: linear-gradient(45deg, #DD80ED 0%, #3D28E3 100%);
         z-index: 1;
@@ -38,7 +57,7 @@
             left: 0;
             background-image: linear-gradient(225deg, #DD80ED 0%, #3D28E3 100%);
             z-index: -1;
-            transition: opacity 0.5s linear;
+            transition: opacity 0.3s linear;
             opacity: 0;
             border-radius: 32px;
         }
@@ -52,7 +71,7 @@
             left: 0;
             background-image: linear-gradient(206.57deg, #DD80ED 0%, #3D28E3 83.33%);
             z-index: -1;
-            transition: opacity 0.5s linear;
+            transition: opacity 0.3s linear;
             opacity: 0;
             border-radius: 32px;
         }
@@ -63,6 +82,43 @@
 
         &:active::after {
             opacity: 1;
+        }
+    }
+
+    &__item-btn.hover {
+        background: linear-gradient(225deg, #DD80ED 0%, #3D28E3 100%);
+
+        &:hover::before {
+            opacity: 0;
+        }
+
+        &:active::after {
+            opacity: 0;
+        }
+    }
+
+    &__item-btn.click {
+        background: linear-gradient(206.57deg, #DD80ED 0%, #3D28E3 83.33%);
+
+        &:hover::before {
+            opacity: 0;
+        }
+
+        &:active::after {
+            opacity: 0;
+        }
+    }
+
+    &__item-btn:disabled {
+        background: #CBCBCC;
+        transition: opacity 0.3s linear;
+
+        &:hover::before {
+            opacity: 0;
+        }
+
+        &:active::after {
+            opacity: 0;
         }
     }
 }
