--- a/src/components/ui/chunk/checkboxs/checkboxs.scss
+++ b/src/components/ui/chunk/checkboxs/checkboxs.scss
@@ -1,14 +1,16 @@
+@import '../../../../mixins/media.scss';
 .checkboxs {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 344px);
+    grid-gap: 32px;
+    margin-bottom: 32px;
+    @include for-size(smallMob) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
     // .checkboxs__item
 
     &__item {
-        width: 100%;
-        max-width: 344px;
-    }
-
-    &__item:not(:last-child) {
-        margin-right: 32px;
     }
 }
 
@@ -21,9 +23,10 @@
     &:hover {
         .checks__fake {
             border: 2px solid #3E29E3;
-            transition: .3s ease all;
+            transition: .3s linear;
         }
     }
+
     // .checks__input
 
     &__input {
@@ -47,6 +50,7 @@
         height: 24px;
         border: 2px solid #AEADAE;
         cursor: pointer;
+        transition: .3s linear;
 
         &:hover {
             border: 2px solid #3E29E3;
@@ -62,7 +66,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             opacity: 0;
-            transition: .3s ease all;
+            transition: .3s linear;
         }
     }
 
@@ -70,6 +74,14 @@
 
     &__name {
         margin-left: 16px;
+    }
+}
+
+.checks {
+    &:hover {
+        .checks__input:disabled~.checks__fake {
+            border: 2px solid #AEADAE;
+        }
     }
 }
 
@@ -83,7 +95,7 @@
     &:hover {
         .circles__fake {
             border: 2px solid #3E29E3;
-            transition: .3s ease all;
+            transition: .3s linear;
         }
     }
 
@@ -110,6 +122,7 @@
         border-radius: 100%;
         border: 2px solid #AEADAE;
         cursor: pointer;
+        transition: .3s linear;
 
         &::after {
             position: absolute;
@@ -122,7 +135,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             opacity: 0;
-            transition: .3s ease all;
+            transition: .3s linear;
         }
     }
 
@@ -130,5 +143,13 @@
 
     &__name {
         margin-left: 16px;
+    }
+}
+
+.circles {
+    &:hover {
+        .circles__input:disabled~.circles__fake {
+            border: 2px solid #AEADAE;
+        }
     }
 }
