--- a/src/components/ui/chunk/dropDown/dropDown.scss
+++ b/src/components/ui/chunk/dropDown/dropDown.scss
@@ -1,13 +1,17 @@
-.selects {
-    display: flex;
-    flex-wrap: wrap;
+@import '../../../../mixins/media.scss';
 
+.selects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 280px);
+    grid-column-gap: 32px;
+    margin-bottom: 232px;
+
+    // .selects__item
     &__item {
-        margin-right: 32px;
         width: 100%;
         max-width: 280px;
         user-select: none;
-        margin-bottom: 232px;
+        margin-bottom: 64px;
     }
 }
 
@@ -44,7 +48,7 @@
         color: #7D7D7D;
         opacity: 0;
         bottom: 0;
-        left: 0px;
+        left: 0;
         transition: .2s all ease;
     }
 
@@ -52,11 +56,16 @@
 
     &__content {
         position: absolute;
+        z-index: 10;
         width: 100%;
         top: 100%;
         background: white;
         box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.08);
         transition: all .2s;
+    }
+
+    &__content.open {
+        z-index: -1;
     }
 
     // .dropDown__item
@@ -70,10 +79,6 @@
             color: #FFFFFF;
             transition: .2s all ease;
         }
-    }
-
-    &__item.activeElem {
-        color: #3D28E1;
     }
 }
 
