--- a/src/components/ui/ui.scss
+++ b/src/components/ui/ui.scss
@@ -1,9 +1,12 @@
+@import '../../mixins/media.scss';
 .ui {
-
     // .ui__title
 
     &__title {
         margin-bottom: 24px;
+        @include for-size(smallMob) {
+            text-align: center;
+        }
     }
 
     // .ui__content
@@ -28,16 +31,22 @@
 
     &__block-title {
         margin-bottom: 32px;
+
+        @include for-size(smallMob) {
+            text-align: center;
+        }
     }
 
     // .content__block-titleText
 
     &__block-titleText {
-        margin-bottom: 48px;
+        h3 {
+            margin-bottom: 24px;
+        }
+        margin-bottom: 44px;
 
-        h2 {
-            font-size: 24px;
-            line-height: 32px;
+        @include for-size(smallMob) {
+            text-align: center;
         }
     }
 }
