--- a/src/components/ui/chunk/accordions/accordions.scss
+++ b/src/components/ui/chunk/accordions/accordions.scss
@@ -12,6 +12,10 @@
         &:hover {
             border-bottom: 1px solid #3E29E3;
         }
+
+        &_hover {
+            border-bottom: 1px solid #3E29E3;
+        }
     }
 
     // .accordion__title
@@ -32,6 +36,10 @@
     &__title-name {
         font-weight: 500;
         color: #7D7D7D;
+
+        &_hover {
+            color: #1B1B1B;
+        }
     }
 
     // .accordion__title-img
