--- a/src/components/typography/typography.scss
+++ b/src/components/typography/typography.scss
@@ -63,21 +63,19 @@
 }
 
 .tabActive {
-    display: block;
+    display: grid;
+    grid-gap: 32px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 48px;
+    @include for-size(mob) {
+        grid-gap: 12px;
+    }
 }
 
 .item {
-
     // .item__row
 
     &__row {
-        display: grid;
-        grid-gap: 32px 48px;
-        grid-template-columns: minmax(min-content, 280px) 1fr;
-        margin-bottom: 48px;
-        @include for-size (smallMob) {
-            text-align: center;
-        }
     }
 
     // .item__row-name
