--- a/src/components/ui/chunk/buttons/buttons.scss
+++ b/src/components/ui/chunk/buttons/buttons.scss
@@ -48,32 +48,25 @@
         z-index: 1;
         cursor: pointer;
 
-        &::before {
+        &::before, ::after {
             position: absolute;
             content: "";
             top: 0;
             right: 0;
             bottom: 0;
             left: 0;
-            background-image: linear-gradient(225deg, #DD80ED 0%, #3D28E3 100%);
             z-index: -1;
             transition: opacity 0.3s linear;
             opacity: 0;
             border-radius: 32px;
         }
 
+        &::before {
+            background-image: linear-gradient(225deg, #DD80ED 0%, #3D28E3 100%);
+        }
+
         &::after {
-            position: absolute;
-            content: "";
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
             background-image: linear-gradient(206.57deg, #DD80ED 0%, #3D28E3 83.33%);
-            z-index: -1;
-            transition: opacity 0.3s linear;
-            opacity: 0;
-            border-radius: 32px;
         }
 
         &:hover::before {
