--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -106,7 +106,7 @@
     &__container {
       display: flex;
       flex-direction: column;
-      padding: 16px 16px 16px 16px;
+      padding: 16px;
     }
   }
 }
